# haskell2

./: README.md  Test2  TestIf  haskell2.cabal
Code/: BinaryTree.hs  Expr.hs  Main.hs  Parsing.hs  REPL.hs
Tests/TestFiles/: TestIf
Tests/public/Test01_Print/: progRun.sh
Tests/public/Test02_Arithmatic_ToInt_ToString/: progRun.sh
Tests/public/Test03_If_Statements/: expected.out  progRun.sh
Tests/public/Test04_For_Loops/: progRun.sh
Tests/public/Test05_Functions/: progRun.sh
Tests/public/Test06_Repeat/: progRun.sh
app/: BinaryTree.hs  Expr.hs  Main.hs  Parsing.hs  QuickCheck.hs  REPL.hs  haskell2.cabal  inputHistory  myhist
dist-newstyle/cache/: source-hashes
