cabal-version:      2.4
name:               haskell2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             200014517, 200027532, 200019811

maintainer:         200014517, 200027532, 200019811

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  BinaryTree, Parsing, REPL, Expr


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, haskeline, directory
    hs-source-dirs:   app
    default-language: Haskell2010
